Log each slow query in a multi-statement query to the slow query log. (Bug #8475)